kubernetes/apps/default/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: default
spec:
  ports:
    - name: https
      port: 443
      targetPort: 9090
  selector:
    app: linkding
  type: ClusterIP
