kubernetes/apps/default/linkding/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkding
  namespace: default
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - linkding.local.elmurphy.com
  rules:
    - backendRefs:
        - name: linkding
          port: 9090
