kubernetes/apps/default/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
  namespace: default
spec:
  ingressClassName: cilium
  rules:
    - host: linkding.mich-murphy.com
      http:
        paths:
          - backend:
              service:
                name: linkding
                port:
                  number: 9090
            path: /
            pathType: Prefix
